[package]
name = "Rust_Websocket"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = {version = "1.29.1", features = ["full"] }
tungstenite = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4.0"
anyhow = "1.0.72"

[[bin]]
name = "my_websocket"
path = "src/main.rs"
